# tic-tac-toe-ports-and-adapters

./: .gitignore  README.md  flake.nix  maskfile.md  pyproject.toml
python/cli-typer/: pyproject.toml
python/cli-typer/tictactoe_cli/: __init__.py  main.py
python/core/: README.md  main.py  pyproject.toml
python/core/tests/: test_application.py  test_minimax.py  test_presentation.py  test_properties.py  test_reducer.py  test_types.py
python/core/tictactoe/: __init__.py  application.py  cli.py  errors.py  minimax.py  ports.py  presentation.py  reducer.py  types.py
python/gui-qt/: README.md  pyproject.toml
python/gui-qt/tictactoe_qt/: __init__.py  main.py
python/tui-textual/: README.md  pyproject.toml
python/tui-textual/tictactoe_textual/: __init__.py  main.py
python/web/: README.md  pyproject.toml
python/web/tictactoe_web/: __init__.py  app.py
python/web/tictactoe_web/templates/: board.html
