[project]
name = "tictactoe-cli"
version = "0.1.0"
description = "Typer CLI for tic-tac-toe (depends on core only via the GameSession port)"
requires-python = ">=3.11"
dependencies = [
  "core",
  "typer>=0.12.0",
]

[project.scripts]
tictactoe = "tictactoe_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tictactoe_cli"]

[tool.uv.sources]
core = { path = "../core" }
