[project]
name = "core"
version = "0.1.0"
description = "Tic-tac-toe domain (NewTypes + reducer) and Typer CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
]

[project.scripts]
tictactoe = "tictactoe.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tictactoe"]
