[project]
name = "core"
version = "0.1.0"
description = "Tic-tac-toe domain, ports, application service, and presentation helpers (no framework dependencies)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tictactoe"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
