[project]
name = "tictactoe-textual"
version = "0.1.0"
description = "Textual TUI for tic-tac-toe (depends on core only via the GameSession port)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "core",
  "textual>=0.47.0",
]

[project.scripts]
tictactoe-tui = "tictactoe_textual.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tictactoe_textual"]

[tool.uv.sources]
core = { path = "../core" }
